--- a/PierresTreats/Views/Treats/Index.cshtml
+++ b/PierresTreats/Views/Treats/Index.cshtml
@@ -3,20 +3,24 @@
 }
 
 @using PierresTreats.Models;
+@model IEnumerable<PierresTreats.Models.Treat>
 
-<h1>Treats</h1>
+<h1>Treats for @User.Identity.Name</h1>
 
-@if (@Model.Count == 0)
+@if (Model.Any())
+{
+  <ul>
+    @foreach (Treat treat in Model)
+    {
+      <li>@Html.ActionLink($"{treat.Name}", "Details", new { id = treat.TreatId })</li>
+    }
+  </ul>
+} 
+else
 {
   <h3>No treats have been added yet!</h3>
-} 
-
-<ul>
-  @foreach(Treat treat in Model)
-  {
-    <li>@Html.ActionLink($"{treat.Name}", "Details", new { id = treat.TreatId })</li>
-  }
-</ul>
+}
 
 <p>@Html.ActionLink("Add new treat", "Create")</p>
+
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
