--- a/PierresTreats/Views/Home/Index.cshtml
+++ b/PierresTreats/Views/Home/Index.cshtml
@@ -3,5 +3,6 @@
 }
 
 <h1>Welcome to Pierre's Sweet and Savory Treats!</h1>
-<p>@Html.ActionLink("See all flavors", "Index", "Flavors")</p> <p>@Html.ActionLink("See all Treats", "Index", "Treats")</p>
-<p>@Html.ActionLink("Create an account", "Index", "Account")</p>
+<p>@Html.ActionLink("See all Flavors", "Index", "Flavors")</p> <p>@Html.ActionLink("See all Treats", "Index", "Treats")</p>
+<p>@Html.ActionLink("Log in to your Account", "Login", "Account")</p>
+<p>@Html.ActionLink("Create an Account", "Register", "Account")</p>
