--- a/PierresTreats/Views/Flavors/Create.cshtml
+++ b/PierresTreats/Views/Flavors/Create.cshtml
@@ -16,5 +16,5 @@
 
   <input type="submit" value="Add new flavor" class="btn btn-default" />
 }
-<p>@Html.ActionLink("Show all items", "Index")</p>
+<p>@Html.ActionLink("Show all flavors", "Index")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
